k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fitnesscenter-service
  namespace: fitnesscenter
spec:
  selector:
    app: fitnesscenter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
