k8s/sqlserver-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqlserver
  namespace: fitnesscenter
spec:
  selector:
    matchLabels:
      app: sqlserver
  serviceName: "sqlserver-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: sqlserver-data
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: sqlserver-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: fitnesscenter
spec:
  selector:
    app: sqlserver
  ports:
    - port: 1433
      targetPort: 1433
  clusterIP: None
