k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitnesscenter-ingress
  namespace: fitnesscenter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fitnesscenter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fitnesscenter-service
                port:
                  number: 80
